<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@drawable/bottom_sheet_rounded_top_corner">

	<TextView
		android:id="@+id/tvTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginTop="16dp"
		android:text="@string/no_internet_connection"
		android:textStyle="bold"
		android:textColor="#6617C0"
		android:fontFamily="@font/poppins_medium"
		android:textSize="16sp" />

	<TextView
		android:id="@+id/tvDescription"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/tvTitle"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginHorizontal="32dp"
		android:layout_marginTop="16dp"
		android:gravity="center"
		android:text="@string/no_internet_connection_desc"
		android:textColor="#474747"
		android:fontFamily="@font/poppins_medium"
		android:textSize="16sp" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btnAlright"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvDescription"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginTop="12dp"
		android:layout_marginBottom="20dp"
		android:layout_marginHorizontal="12dp"
		android:text="@string/alright"
		android:textSize="12sp"
		android:textAllCaps="false"
		android:textColor="#FFFFFF"
		android:background="@drawable/btn_rounded" />


</androidx.constraintlayout.widget.ConstraintLayout>