<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="4dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/img_diomond"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/offer_desc"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"/>

        <!-- Use layout_weight to push the last TextView to the end -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:fontFamily="@font/roboto_bold"
            android:text="24:51"
            android:gravity="end"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:layout_weight="1"/>

    </LinearLayout>


    <View
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/view_basket_desc"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/text_size_medium"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@drawable/bg_basket_button"
        android:text="@string/view_basket"
        android:textSize="@dimen/text_size_medium"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTerms" />


</LinearLayout>